--- a/README.html
+++ b/README.html
@@ -357,7 +357,7 @@ display: none;
 <p>This is a course on economic theory for project evaluation.</p>
 <div id="clases" class="section level2">
 <h2>Clases</h2>
-<p><a href="https://keynes37.github.io/Espeval/Class/intro.html">Introducción</a></p>
+<p><a href="https://keynes37.github.io/Espeval/Clases/intro.html">Introducción</a></p>
 </div>
 </div>
 
