--- a/README.html
+++ b/README.html
@@ -358,6 +358,7 @@ display: none;
 <div id="clases" class="section level2">
 <h2>Clases</h2>
 <p><a href="https://keynes37.github.io/Espeval/Clases/intro.html">Introducción</a></p>
+<p>(<a href="https://keynes37.github.io/Econometrics/Class/Class01/Class01.html#1" class="uri">https://keynes37.github.io/Econometrics/Class/Class01/Class01.html#1</a>)</p>
 </div>
 </div>
 
