--- a/README.html
+++ b/README.html
@@ -357,8 +357,8 @@ display: none;
 <p>This is a course on economic theory for project evaluation.</p>
 <div id="clases" class="section level2">
 <h2>Clases</h2>
-<p><a href="https://keynes37.github.io/Espeval/Clases/intro.html">Introducción</a></p>
-<p>(<a href="https://keynes37.github.io/Econometrics/Class/Class01/Class01.html#1" class="uri">https://keynes37.github.io/Econometrics/Class/Class01/Class01.html#1</a>)</p>
+<p><a href="https://keynes37.github.io/Espeval/main/Clases/intro.html#1">Introducción</a></p>
+<p><a href="https://raw.githack.com/keynes37/Espeval/main/Clases/Intro.html">compendio</a></p>
 </div>
 </div>
 
