--- a/README.html
+++ b/README.html
@@ -352,12 +352,12 @@ display: none;
 </div>
 
 
-<div id="espeval" class="section level1">
-<h1>Espeval</h1>
+<div id="espeval-1.0" class="section level1">
+<h1>Espeval 1.0</h1>
 <p>This is a course on economic theory for project evaluation.</p>
 <div id="clases" class="section level2">
 <h2>Clases</h2>
-<p><a href="https://keynes37.github.io/Espeval/main/Clases/intro.html#1">Introducción</a></p>
+<p><a href="https://keynes37.github.io/Espeval/Clases/Intro.html">Introducción</a></p>
 <p><a href="https://raw.githack.com/keynes37/Espeval/main/Clases/Intro.html">compendio</a></p>
 </div>
 </div>
