--- a/README.html
+++ b/README.html
@@ -358,6 +358,8 @@ display: none;
 <div id="clases" class="section level2">
 <h2>Clases</h2>
 <p><a href="https://keynes37.github.io/Espeval/Clases/Intro.html">Introducción</a></p>
+<p><a href="https://keynes37.github.io/Espeval/Clases/clase01.html">Clase
+1</a></p>
 <p><a href="https://raw.githack.com/keynes37/Espeval/main/Clases/Intro.html">compendio</a></p>
 </div>
 </div>
