--- a/Clases/clase01.html
+++ b/Clases/clase01.html
@@ -1694,13 +1694,106 @@ B
 <p><span class="math display">\[Var\;\%=\frac{\left ( 15-20 \right )}{20}*100= -25\%\]</span></p>
 </div>
 <div class="fragment">
-<p>La elasticidad viene a ser: <span class="math inline">\(e_d=\dfrac{-25\%}{13\%}=1.92\)</span>, que significa que el cambio ha sido elastico</p>
+<p>La elasticidad viene a ser: <span class="math inline">\(e_d=\dfrac{-25\%}{13\%}=-1.92\)</span>, que significa que el cambio ha sido elástico.</p>
 </div>
 </section>
 <section id="elasticidad-5" class="slide level2">
 <h2>Elasticidad</h2>
 <div class="fragment">
-<p>Algunos ejemplos por consumo de elasticidad tenemos:</p>
+<blockquote>
+<p>La medida de respuesta a la sensibilidad de los precios</p>
+</blockquote>
+</div>
+<div class="fragment">
+<p><span class="math display">\[\epsilon_d = \dfrac{\text{% cambio en cantidad de demanda}}{\text{% cambio en los precios}} \leq 0\]</span></p>
+</div>
+<div class="fragment">
+<p><span class="alert">Interpretación:</span> «Un aumento de un uno por ciento el precio conduce a un aumento de <span class="math inline">\(\epsilon_d\)</span> por ciento en la cantidad demandada».</p>
+</div>
+<ul>
+<li class="fragment"><p><span class="math inline">\(\epsilon_d &lt; -1\)</span> ==&gt; la demanda es <span class="alert">elastica</span> o [sensible]{alert} a cambios en el precio.</p></li>
+<li class="fragment"><p><span class="math inline">\(-1 &lt;\epsilon_d \leq 0\)</span> ==&gt; la demanda es <span class="blut">inelastica</span> o <span class="blut">insensible</span> a cambios en el precio.</p></li>
+</ul>
+</section>
+<section id="elasticidad-6" class="slide level2">
+<h2>Elasticidad</h2>
+<div class="fragment">
+<p>Ejemplos de sensibilidad de consumo vamos a tener:</p>
+</div>
+<div class="fragment">
+<div class="cell" data-layout-align="center" data-escape="false">
+<div class="cell-output-display">
+<table class="caption-top" data-quarto-postprocess="true">
+<thead>
+<tr class="header">
+<th style="text-align: left;" data-quarto-table-cell-role="th">Good/Service</th>
+<th style="text-align: center;" data-quarto-table-cell-role="th">Elasticidad de la Demanda</th>
+<th style="text-align: center;" data-quarto-table-cell-role="th">Elastica o Inelastica?</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left; color: rgba(39, 40, 34, 255) !important; line-height: 110%; font-style: italic; color: rgba(39, 40, 34, 255) !important;">Viajes de Negocio</td>
+<td style="text-align: center; color: rgba(39, 40, 34, 255) !important; line-height: 110%;">-0.10</td>
+<td style="text-align: center; color: rgba(39, 40, 34, 255) !important; line-height: 110%;">Inelastico</td>
+</tr>
+<tr class="even">
+<td style="text-align: left; color: rgba(39, 40, 34, 255) !important; line-height: 110%; font-style: italic; color: rgba(39, 40, 34, 255) !important;">Cuidado Médico</td>
+<td style="text-align: center; color: rgba(39, 40, 34, 255) !important; line-height: 110%;">-0.17</td>
+<td style="text-align: center; color: rgba(39, 40, 34, 255) !important; line-height: 110%;">Inelastico</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left; color: rgba(39, 40, 34, 255) !important; line-height: 110%; font-style: italic; color: rgba(39, 40, 34, 255) !important;">Café</td>
+<td style="text-align: center; color: rgba(39, 40, 34, 255) !important; line-height: 110%;">-0.25</td>
+<td style="text-align: center; color: rgba(39, 40, 34, 255) !important; line-height: 110%;">Inelastico</td>
+</tr>
+<tr class="even">
+<td style="text-align: left; color: rgba(39, 40, 34, 255) !important; line-height: 110%; font-style: italic; color: rgba(39, 40, 34, 255) !important;">Cigarrillos</td>
+<td style="text-align: center; color: rgba(39, 40, 34, 255) !important; line-height: 110%;">-0.45</td>
+<td style="text-align: center; color: rgba(39, 40, 34, 255) !important; line-height: 110%;">Inelastico</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left; color: rgba(39, 40, 34, 255) !important; line-height: 110%; font-style: italic; color: rgba(39, 40, 34, 255) !important;">Cine</td>
+<td style="text-align: center; color: rgba(39, 40, 34, 255) !important; line-height: 110%;">-0.90</td>
+<td style="text-align: center; color: rgba(39, 40, 34, 255) !important; line-height: 110%;">Inelastico</td>
+</tr>
+<tr class="even">
+<td style="text-align: left; color: rgba(39, 40, 34, 255) !important; line-height: 110%; font-style: italic; color: rgba(39, 40, 34, 255) !important;">Colegio Privado</td>
+<td style="text-align: center; color: rgba(39, 40, 34, 255) !important; line-height: 110%;">-1.10</td>
+<td style="text-align: center; color: rgba(39, 40, 34, 255) !important; line-height: 110%;">Elastico</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left; color: rgba(39, 40, 34, 255) !important; line-height: 110%; font-style: italic; color: rgba(39, 40, 34, 255) !important;">Restaurante</td>
+<td style="text-align: center; color: rgba(39, 40, 34, 255) !important; line-height: 110%;">-1.60</td>
+<td style="text-align: center; color: rgba(39, 40, 34, 255) !important; line-height: 110%;">Elastico</td>
+</tr>
+<tr class="even">
+<td style="text-align: left; font-style: italic; color: rgba(39, 40, 34, 255) !important;">Viajes de Ocio</td>
+<td style="text-align: center;">-2.40</td>
+<td style="text-align: center;">Elastico</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left; font-style: italic; color: rgba(39, 40, 34, 255) !important;">Vegetales</td>
+<td style="text-align: center;">-3.70</td>
+<td style="text-align: center;">Elastico</td>
+</tr>
+<tr class="even">
+<td style="text-align: left; font-style: italic; color: rgba(39, 40, 34, 255) !important;">Carros Honda</td>
+<td style="text-align: center;">-4.00</td>
+<td style="text-align: center;">Elastico</td>
+</tr>
+</tbody>
+</table>
+
+
+</div>
+</div>
+</div>
+</section>
+<section id="elasticidad-7" class="slide level2">
+<h2>Elasticidad</h2>
+<div class="fragment">
+<p>Algunos ejemplos por consumo de elasticidad-ingreso tenemos:</p>
 </div>
 <div class="fragment">
 <div class="cell" data-layout-align="center" data-escape="false">
@@ -1770,7 +1863,6 @@ B
 
 </div>
 </div>
-<p>```</p>
 </div>
 </section>
 <section id="gracias-por-su-atención" class="slide level2 center">
