--- a/Clases/clase01.html
+++ b/Clases/clase01.html
@@ -1711,7 +1711,7 @@ B
 <p><span class="alert">Interpretación:</span> «Un aumento de un uno por ciento el precio conduce a un aumento de <span class="math inline">\(\epsilon_d\)</span> por ciento en la cantidad demandada».</p>
 </div>
 <ul>
-<li class="fragment"><p><span class="math inline">\(\epsilon_d &lt; -1\)</span> ==&gt; la demanda es <span class="alert">elastica</span> o [sensible]{alert} a cambios en el precio.</p></li>
+<li class="fragment"><p><span class="math inline">\(\epsilon_d &lt; -1\)</span> ==&gt; la demanda es <span class="alert">elastica</span> o <span class="alert">sensible</span> a cambios en el precio.</p></li>
 <li class="fragment"><p><span class="math inline">\(-1 &lt;\epsilon_d \leq 0\)</span> ==&gt; la demanda es <span class="blut">inelastica</span> o <span class="blut">insensible</span> a cambios en el precio.</p></li>
 </ul>
 </section>
@@ -1726,7 +1726,7 @@ B
 <table class="caption-top" data-quarto-postprocess="true">
 <thead>
 <tr class="header">
-<th style="text-align: left;" data-quarto-table-cell-role="th">Good/Service</th>
+<th style="text-align: left;" data-quarto-table-cell-role="th">Bien/Servicio</th>
 <th style="text-align: center;" data-quarto-table-cell-role="th">Elasticidad de la Demanda</th>
 <th style="text-align: center;" data-quarto-table-cell-role="th">Elastica o Inelastica?</th>
 </tr>
