--- a/Clases/clase01.html
+++ b/Clases/clase01.html
@@ -1673,13 +1673,13 @@ B
 </blockquote>
 </div>
 <div class="fragment">
-<p><span class="math display">\[Var\;\%=\frac{\left ( X_{Presente}-X_{Pasado} \right )}{X_{Pasado}}*100\]</span></p>
+<p><span class="math display">\[Var=\frac{\left ( X_{Presente}-X_{Pasado} \right )}{X_{Pasado}}*100\]</span></p>
 </div>
 <div class="fragment">
 <p><svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:1em;width:1em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:red;overflow:visible;position:relative;"><path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"></path></svg> Tenga en consideración que si los precios por decir un ejemplo eran de <span class="alert"><code>$</code>13000</span> y pasaron a ser de <span class="alert"><code>$</code>14700</span>, entonces la variación porcentual es de:</p>
 </div>
 <div class="fragment">
-<p><span class="math display">\[Var \; \%=\frac{( 14700-13000 )}{13000}*100= 13\%\]</span></p>
+<p><span class="math display">\[Var \; =\frac{( 14700-13000 )}{13000}*100= 13\text{%}\]</span></p>
 </div>
 </section>
 <section id="elasticidad-4" class="slide level2">
@@ -1688,13 +1688,13 @@ B
 <p>Digamos ahora que las cantidades de demanda (consumo), pasaron de 20 a 15, al calcular su variación tendremos</p>
 </div>
 <div class="fragment">
-<p><span class="math display">\[Var \; \% =\frac{\left ( X_{Presente}-X_{Pasado} \right )}{X_{Pasado}}*100\]</span></p>
+<p><span class="math display">\[Var \;  =\frac{\left ( X_{Presente}-X_{Pasado} \right )}{X_{Pasado}}*100\]</span></p>
 </div>
 <div class="fragment">
-<p><span class="math display">\[Var\;\%=\frac{\left ( 15-20 \right )}{20}*100= -25\%\]</span></p>
+<p><span class="math display">\[Var\;=\frac{\left ( 15-20 \right )}{20}*100= -25\text{%}\]</span></p>
 </div>
 <div class="fragment">
-<p>La elasticidad viene a ser: <span class="math inline">\(e_d=\dfrac{-25\%}{13\%}=-1.92\)</span>, que significa que el cambio ha sido elástico.</p>
+<p>La elasticidad viene a ser: <span class="math inline">\(e_d=\dfrac{-25\text{%}}{13\text{%}}=-1.92\)</span>, que significa que el cambio ha sido elástico.</p>
 </div>
 </section>
 <section id="elasticidad-5" class="slide level2">
