--- a/Clases/clase01.html
+++ b/Clases/clase01.html
@@ -1659,7 +1659,7 @@ B
 </div>
 </div>
 <div class="fragment">
-<p><span class="math display">\[\epsilon^{d}=\dfrac{\% \triangle Q_{d}}{\% \triangle P} = \dfrac{\dfrac{\triangle Q}{Q}}{\dfrac{\triangle P}{P}}\]</span></p>
+<p><span class="math display">\[\epsilon^{d}=\dfrac{\text{%} \triangle Q_{d}}{\text{%} \triangle P} = \dfrac{\dfrac{\triangle Q}{Q}}{\dfrac{\triangle P}{P}}\]</span></p>
 </div>
 <div class="fragment">
 <p><span class="blut"><em>Debe saber que</em></span> <span class="math inline">\(\triangle Q= Q_2-Q_1\)</span>, donde <span class="math inline">\(Q_2\)</span> <em>es el presente de la variable o tiempo actual y</em> <span class="math inline">\(Q_1\)</span> <em>viene siendo el pasado</em>.</p>
@@ -1669,7 +1669,7 @@ B
 <h2>Elasticidad</h2>
 <div class="fragment">
 <blockquote>
-<p><span class="alert">Variación Porcentual (%)</span>: Mide los cambios <strong>porcentuales</strong> de una <strong>variable característica</strong>. Esta puede ser <em>positiva</em> o <em>negativa</em>.</p>
+<p><span class="alert">Variación Porcentual</span>: Mide los cambios <strong>porcentuales</strong> de una <strong>variable característica</strong>. Esta puede ser <em>positiva</em> o <em>negativa</em>.</p>
 </blockquote>
 </div>
 <div class="fragment">
