--- a/Clases/clase01-speaker.html
+++ b/Clases/clase01-speaker.html
@@ -1679,7 +1679,7 @@ B
 <p><svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:1em;width:1em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:red;overflow:visible;position:relative;"><path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"></path></svg> Tenga en consideración que si los precios por decir un ejemplo eran de <span class="alert"><code>$</code>13000</span> y pasaron a ser de <span class="alert"><code>$</code>14700</span>, entonces la variación porcentual es de:</p>
 </div>
 <div class="fragment">
-<p><span class="math display">\[Var \; =\frac{( 14700-13000 )}{13000}*100= 13\text{%}\]</span></p>
+<p><span class="math display">\[Var \; =\frac{( 14700-13000 )}{13000}*100=13 \text{%}\]</span></p>
 </div>
 </section>
 <section id="elasticidad-4" class="slide level2">
@@ -1705,10 +1705,10 @@ B
 </blockquote>
 </div>
 <div class="fragment">
-<p><span class="math display">\[\epsilon_d = \dfrac{\text{% cambio en cantidad de demanda}}{\text{% cambio en los precios}} \leq 0\]</span></p>
+<p><span class="math display">\[\epsilon_d = \dfrac{\text{cambio porcentual en cantidad de demanda}}{\text{cambio porcentual en los precios}} \leq 0\]</span></p>
 </div>
 <div class="fragment">
-<p><span class="alert">Interpretación:</span> «Un aumento de un uno por ciento el precio conduce a un aumento de <span class="math inline">\(\epsilon_d\)</span> por ciento en la cantidad demandada».</p>
+<p><span class="alert">Interpretación:</span> Un aumento de un uno por ciento el precio conduce a un aumento de <span class="math inline">\(\epsilon_d\)</span> por ciento en la cantidad demandada».</p>
 </div>
 <ul>
 <li class="fragment"><p><span class="math inline">\(\epsilon_d &lt; -1\)</span> ==&gt; la demanda es <span class="alert">elastica</span> o <span class="alert">sensible</span> a cambios en el precio.</p></li>
