--- a/Clases/clase01-speaker.html
+++ b/Clases/clase01-speaker.html
@@ -1659,7 +1659,7 @@ B
 </div>
 </div>
 <div class="fragment">
-<p><span class="math display">\[\epsilon^{d}=\dfrac{\text{%} \triangle Q_{d}}{\text{%} \triangle P} = \dfrac{\dfrac{\triangle Q}{Q}}{\dfrac{\triangle P}{P}}\]</span></p>
+<p><span class="math display">\[\epsilon^{d}=\dfrac{\triangle Q_{d}}{ \triangle P} = \dfrac{\dfrac{\triangle Q}{Q}}{\dfrac{\triangle P}{P}}\]</span></p>
 </div>
 <div class="fragment">
 <p><span class="blut"><em>Debe saber que</em></span> <span class="math inline">\(\triangle Q= Q_2-Q_1\)</span>, donde <span class="math inline">\(Q_2\)</span> <em>es el presente de la variable o tiempo actual y</em> <span class="math inline">\(Q_1\)</span> <em>viene siendo el pasado</em>.</p>
@@ -1694,7 +1694,7 @@ B
 <p><span class="math display">\[Var\;=\frac{\left ( 15-20 \right )}{20}*100= -25\text{%}\]</span></p>
 </div>
 <div class="fragment">
-<p>La elasticidad viene a ser: <span class="math inline">\(e_d=\dfrac{-25\text{%}}{13\text{%}}=-1.92\)</span>, que significa que el cambio ha sido elástico.</p>
+<p>La elasticidad viene a ser: <span class="math inline">\(e_d=\dfrac{-25}{13}=-1.92\)</span>, que significa que el cambio ha sido elástico.</p>
 </div>
 </section>
 <section id="elasticidad-5" class="slide level2">
