--- a/README.html
+++ b/README.html
@@ -360,7 +360,8 @@ display: none;
 <p><a href="https://keynes37.github.io/Espeval/Clases/Intro.html">Introducción</a></p>
 <p><a href="https://keynes37.github.io/Espeval/Clases/clase01.html">Clase
 1</a></p>
-<p><a href="https://raw.githack.com/keynes37/Espeval/main/Clases/Intro.html">compendio</a></p>
+<p><a href="https://keynes37.github.io/Espeval/Clases/clase02.html">Clase
+2</a></p>
 </div>
 </div>
 
